ready for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "panim-loader"
 version = "0.1.0"
 edition = "2021"
 authors = ["Marc-Stefan Cassola"]
-categories = ["format-parsers", "format-writers", "media", "multimedia", "animation"]
+categories = ["rendering::data-formats", "parser-implementations", "game-development", "multimedia"]
 description = "Loader for the PANIM format for custom properties in Blender"
 exclude = ["assets/", ".github/", "crates/", "examples/", "tests/"]
 keywords = ["panim", "loader", "animation", "blender"]
