--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
         with:
             toolchain: stable
             override: true
+      - run: cargo fmt --check
+      - run: cargo test
       - uses: katyo/publish-crates@v2
         with:
             registry-token: ${{ secrets.CRATES_TOKEN }}
